# crown-pointerkind-extractor

./: Cargo.toml  README.md
examples/: array.rs  struct.rs
src/: main.rs
