[package]
name = "crown-pointerkind-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
proc-macro2 = { version = "1.0.67", features = ["span-locations"] }
regex = "1.9.6"
strum_macros = "0.25.2"
syn = { version = "2.0.37", features = ["full"] }
